--- a/variables_and_string.ipynb
+++ b/variables_and_string.ipynb
@@ -31,9 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A Brief Profile of C. Dickens in 505 characters.\n",
+      "\n",
+      "Hello. My name is Charles Dickens.\n",
+      "I am an English novelist. I was born on February 7, 1812, in Portsmouth, England.\n",
+      "I am most famous as a writer of the victorian era.\n",
+      "I married Catherine Hogarth in 1836. We have ten children.\n",
+      "Some of my most famous works include \"A Christmas Carol\", \"Oliver Twist\", \"David Copperfield\", and \"Great Expectations\".\n",
+      "Besides being a writer, my other talent was doing dramatic public readings of my work.\n",
+      "I died on June 9, 1870, at my home in Gad's Hill Place, Kent, England.\n",
+      "OOPS!!! Sorry, your output text does not match the test text.\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"CHARLES DICKENS\"\n",
     "dob = \"February 7, 1812\"\n",
@@ -48,14 +65,25 @@
     "place_of_death = \"Gad's Hill Place, Kent, England\"\n",
     "\n",
     "#Use the different methods that are given under 'REQUIREMENTS' to complete the code.\n",
+    "name_initial = name[0]\n",
+    "name_title=name.title()\n",
+    "birthplace_title=birthplace.title()\n",
+    "other_talent_lower=other_talent.lower()\n",
+    "famous_for_lower=famous_for.lower()\n",
     "\n",
     "\n",
+    "title = f\"A Brief Profile of {name_initial}. Dickens in 505 characters\" # The title of the output text should be stored in this variable\n",
     "\n",
+    "output_text = f'''{title}.\n",
     "\n",
-    "\n",
-    "title = # The title of the output text should be stored in this variable\n",
-    "\n",
-    "output_text = # Your final output text should be stored in this variable, which will also include the 'title'.\n",
+    "Hello. My name is {name_title}.\n",
+    "I am an English novelist. I was born on {dob}, in {birthplace_title}.\n",
+    "I am most famous as {famous_for_lower}.\n",
+    "I married {married_to} in {year_of_marriage}. We have {number_of_children} children.\n",
+    "Some of my most famous works include {famous_works}.\n",
+    "Besides being a writer, my other talent was {other_talent_lower}.\n",
+    "I died on {death_date}, at my home in {place_of_death}.'''\n",
+    "# Your final output text should be stored in this variable, which will also include the 'title'.\n",
     "\n",
     "print(output_text)\n",
     "\n",
@@ -92,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
