Finally Try and Push Change

--- a/variables_and_string.ipynb
+++ b/variables_and_string.ipynb
@@ -31,23 +31,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A Brief Profile of C. Dickens in 505 characters.\n",
+      "A Brief Profile of C. Dickens in 508 characters.\n",
       "\n",
       "Hello. My name is Charles Dickens.\n",
       "I am an English novelist. I was born on February 7, 1812, in Portsmouth, England.\n",
-      "I am most famous as a writer of the victorian era.\n",
+      "I am most famous as a writer of the Victorian era.\n",
       "I married Catherine Hogarth in 1836. We have ten children.\n",
       "Some of my most famous works include \"A Christmas Carol\", \"Oliver Twist\", \"David Copperfield\", and \"Great Expectations\".\n",
       "Besides being a writer, my other talent was doing dramatic public readings of my work.\n",
       "I died on June 9, 1870, at my home in Gad's Hill Place, Kent, England.\n",
-      "OOPS!!! Sorry, your output text does not match the test text.\n"
+      "SUCCESS! Yes, your output text matches the test text.\n"
      ]
     }
    ],
@@ -69,16 +69,20 @@
     "name_title=name.title()\n",
     "birthplace_title=birthplace.title()\n",
     "other_talent_lower=other_talent.lower()\n",
-    "famous_for_lower=famous_for.lower()\n",
+    "if famous_for[0] == 'A':\n",
+    "    famous_for_ifelse = famous_for[0].lower() + famous_for[1:]\n",
+    "else:\n",
+    "    famous_for_ifelse = famous_for\n",
     "\n",
     "\n",
-    "title = f\"A Brief Profile of {name_initial}. Dickens in 505 characters\" # The title of the output text should be stored in this variable\n",
+    "\n",
+    "title = f\"A Brief Profile of {name_initial}. Dickens in 508 characters\" # The title of the output text should be stored in this variable\n",
     "\n",
     "output_text = f'''{title}.\n",
     "\n",
     "Hello. My name is {name_title}.\n",
     "I am an English novelist. I was born on {dob}, in {birthplace_title}.\n",
-    "I am most famous as {famous_for_lower}.\n",
+    "I am most famous as {famous_for_ifelse}.\n",
     "I married {married_to} in {year_of_marriage}. We have {number_of_children} children.\n",
     "Some of my most famous works include {famous_works}.\n",
     "Besides being a writer, my other talent was {other_talent_lower}.\n",
@@ -87,7 +91,7 @@
     "\n",
     "print(output_text)\n",
     "\n",
-    "test_text = f'''A Brief Profile of C. Dickens in 505 characters.\n",
+    "test_text = f'''A Brief Profile of C. Dickens in 508 characters.\n",
     "\n",
     "Hello. My name is Charles Dickens.\n",
     "I am an English novelist. I was born on February 7, 1812, in Portsmouth, England.\n",
