new finally try

--- a/variables_and_string.ipynb
+++ b/variables_and_string.ipynb
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A Brief Profile of C. Dickens in 508 characters.\n",
+      "A Brief Profile of C. Dickens in 505 characters.\n",
       "\n",
       "Hello. My name is Charles Dickens.\n",
       "I am an English novelist. I was born on February 7, 1812, in Portsmouth, England.\n",
@@ -76,22 +76,30 @@
     "\n",
     "\n",
     "\n",
-    "title = f\"A Brief Profile of {name_initial}. Dickens in 508 characters\" # The title of the output text should be stored in this variable\n",
     "\n",
-    "output_text = f'''{title}.\n",
-    "\n",
-    "Hello. My name is {name_title}.\n",
+    "initial_output_text = f'''Hello. My name is {name_title}.\n",
     "I am an English novelist. I was born on {dob}, in {birthplace_title}.\n",
     "I am most famous as {famous_for_ifelse}.\n",
-    "I married {married_to} in {year_of_marriage}. We have {number_of_children} children.\n",
+    "I married {married_to} in 1836. We have {number_of_children} children.\n",
     "Some of my most famous works include {famous_works}.\n",
     "Besides being a writer, my other talent was {other_talent_lower}.\n",
     "I died on {death_date}, at my home in {place_of_death}.'''\n",
+    "\n",
+    "\n",
+    "total_characters = len(initial_output_text) \n",
+    "\n",
+    "\n",
+    "title = f\"A Brief Profile of {name_initial}. Dickens in {total_characters} characters.\"\n",
+    "\n",
+    "\n",
+    "output_text = f'''{title}\n",
+    "\n",
+    "{initial_output_text}'''\n",
     "# Your final output text should be stored in this variable, which will also include the 'title'.\n",
     "\n",
     "print(output_text)\n",
     "\n",
-    "test_text = f'''A Brief Profile of C. Dickens in 508 characters.\n",
+    "test_text = f'''A Brief Profile of C. Dickens in 505 characters.\n",
     "\n",
     "Hello. My name is Charles Dickens.\n",
     "I am an English novelist. I was born on February 7, 1812, in Portsmouth, England.\n",
@@ -106,6 +114,13 @@
     "else:\n",
     "    print(\"OOPS!!! Sorry, your output text does not match the test text.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
